gcc/testsuite/rust/rustc/ui/mir/validate/error-body_dg.rs
//@ compile-flags: -Zvalidate-mir

fn _test() {
    let x = || 45;
    missing();
// { dg-error ".E0425." "" { target *-*-* } .-1 }
}

fn main() {}

